--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </div>
 
     <div class="guest container">
-        <h1>GUEST</h1>
+        <h1>AWAY</h1>
         <div class="background">
             <h2 id="count-guest-el">0</h2>
         </div>
